<?xml version="1.0"?> 
<?xml-
model href="http://download.ros.org/schema/package_format3.xsd" schematypens="htt
p://www.w3.org/2001/XMLSchema"?> 
<package format="3"> 
  <name>dynamic_logistics_warehouse</name> 
  <version>1.0.0</version> 
  <description> 
   LARGE INDUTRIAL WAREHOUSE 
  </description> 
  <license>Apache 2.0</license> 
  <author email="belalonium@outlook.com"></author> 
  <maintainer email="belalonium@outlook.com"></maintainer> 
  <buildtool_depend>ament_cmake</buildtool_depend> 
  <exec_depend>gazebo_ros</exec_depend> 
  <exec_depend>gazebo</exec_depend> 
  <exec_depend>gazebo_plugins</exec_depend> 
  <export> 
    <build_type>ament_cmake</build_type> 
  </export> 
</package>
